finished monna vintage

--- a/app/css/base/mixins.styl
+++ b/app/css/base/mixins.styl
@@ -26,7 +26,7 @@ widget(bg, radio, pd, border, shadow)
   border border
   box-shadow shadow
 
-transition(transition)
+transitions(transition)
   -moz-transition   transition
   -o-transition     transition
   -webkit-transition transition
