--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -12,25 +12,25 @@ danger = #ff4b7d
 warning = #ff9039
 default = #ddd
 dark = #777
-optional = #f387c7
+optional = #fa6b6b
 
 /* variables */
-breadcrumbClr = transparent
-shoppingCart = white
+breadcrumbClr = #e9e9e9
+shoppingCart = fontClr
 qtyCartClr = warning
 wSlider = 100% //width slidet home
-hSlider = 400px //slider for home height
-hSmallSlider = 400px //slider for products or small slider height
+hSlider = 600px //slider for home height
+hSmallSlider = 500px //slider for products or small slider height
 wSmallSlider = 100% //slider for products or small slider width
 hShopCart = 100px //shopcart image size height
 wShopCart = 100% //shopcart image size width
 
 /* font style */
 font-size = 15px
-fontClr = black
+fontClr = #555
 fontTitles = 'Josefin Sans', sans-serif
 /* color sections */
-mainColor = black //color of nav
+mainColor = white //color of nav
 footerTopClr = #ccc
 footerClr = #999
 linkClr = #999
