--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -5,7 +5,7 @@
                 <div class="col-md-8 col-sm-8">
                     <div class="title-middle-line">
                         <div class="text-content">
-                            <h4 class="text-uppercase">Bienvenid@ a nuestro blog</h4>
+                            <h4 class="text-uppercase">Blog</h4>
                         </div>
                         <hr>
                     </div>
