--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -122,7 +122,6 @@
     border 1px solid dark
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
 
-
 //buttons bordered
 .bordered //add this class in your button to bordered
   border-radius 30px
@@ -137,11 +136,23 @@
 .box
   box(15px, none, 1px solid #f5f5f5, 3px)
 
+.box-post-blog
+  background-color #f5f5f5
+  .box-container-post 
+    padding 30px 100px 31px 15px
+    text-align left
+  .img-post
+    background-size cover
+    background-repeat no-repeat
+    height 400px 
+    background-position center
+
+
 .box-simple
   @extend .box
   background-color white
   margin-bottom 15px
-  transition(all 0.3s )
+  transition(all 0.3s)
   a
     color fontClr
     &:hover
@@ -154,8 +165,10 @@
       background-size cover
       height 200px
   .box-container
-    text-align center
+    text-align left
     margin-bottom 15px
+    padding-top 15px 
+    height 80px
     p
       height 50px
       padding 10px
@@ -202,9 +215,11 @@
 /*--- BOX CONTACT ---*/
 .box-contact
   h3
+    text-transform uppercase
     color white
     margin-bottom 5px
     padding-bottom 5px
+    font-size 21px
   .list-icons-add
     .nav-link
       color white
@@ -227,6 +242,22 @@
     background white
     width 50%
     margin 0 auto
+    &:before
+      content '<'
+      position absolute
+      left 0
+      color fontClr
+      font-size 40px
+      top -12px
+    &:after
+      content '>'
+      position absolute
+      right 0
+      color fontClr
+      font-size 40px
+      top -12px  
+    .font-type
+      text-transform uppercase
   hr
     position absolute
     border 1px solid black
@@ -432,11 +463,11 @@
     padding 15px
     background-color transparent
   .nav-item.active
-    color danger
+    color optional
     background-color transparent
-    border-bottom 1px solid danger
+    border-bottom 1px solid optional
   .nav-tabs .nav-link.active
-    color danger
+    color optional
   .nav-tabs .nav-link
     border-top none
     border-left none
@@ -456,7 +487,7 @@
 
 .box-widget-white
   background-color transparent
-  border none
+  border 1px solid #ddd
   border-radius 3px
   padding 15px
   margin 25px 0
@@ -478,10 +509,13 @@
   color #555
   float right
 .box-widget
-  widget(white, 2px, 15px, 1px solid #ddd, none)
+  widget(#f5f5f5, 2px, 15px, 1px solid #ddd, none)
+  .dividerw
+    border-color #ddd
   .widget-title
     padding-left 10px
     font-weight bold
+    color fontClr
     padding 20px 10px
     margin 0
   .box-widget-header
@@ -489,18 +523,18 @@
     border-bottom 1px solid #ddd
     font-size 22px
     background-color transparent
-    color #746857
+    color fontClr
   .box-widget-container
     padding 5px
     h3>a, h2>a
       font-size 14px
-      color catext
+      color fontClr
       font-weight 300
       &:hover
-        color cagreen
+        color fontClr
     h2
       font-size 18px
-      color #6a5c5d
+      color fontClr
 
 /* SHOPCART */
 
@@ -513,7 +547,7 @@
 
 #breadcrumb
   background-color breadcrumbClr
-  border-bottom 1px solid black
+  border-bottom 1px solid #ddd
   a
     color fontClr
   .breadcrumb
