--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -9,7 +9,8 @@ body
   font font-size 'Poppins', sans-serif
   .content-area-web
     background-color white
-
+.no-pd-r
+  padding-right 0 !important
 h1,h2,h3,h4,h5, h6
   font-family fontTitles
   margin 0
@@ -53,9 +54,6 @@ md-input-container
 
 .article-content
   padding 60px 0
-
-.mobile-hidde
-  display inline
 
 .desk-hidde
   display none
@@ -152,11 +150,16 @@ md-input-container
     background-size cover
     background-position center
     height 300px
+  .box-description-detail-product
+    padding 60px 0
+    h4
+      text-transform uppercase    
   .article-description
     md-input-container
       width 50%
     .article-price
-      color black
+      padding 5px
+      color fontClr
       margin-bottom 15px
   h3
     color fontClr
@@ -215,13 +218,9 @@ md-input-container
 /* ------ TEMP login CART STYLE ----- */
 #login
   padding 0
-  background-image: url('../img/bg-login.jpg');
-  background-size cover
-  background-position center
+  background-color #f5f5f5
   .bg-login
-    background -moz-linear-gradient(top, rgba(243,135,200,0) 0%, rgba(243,135,200,0.5) 54%, rgba(243,135,200,1) 100%) /* FF3.6-15 */
-    background -webkit-linear-gradient(top, rgba(243,135,200,0) 0%,rgba(243,135,200,0.5) 54%,rgba(243,135,200,1) 100%) /* Chrome10-25,Safari5.1-6 */
-    background linear-gradient(to bottom, rgba(243,135,200,0) 0%,rgba(243,135,200,0.5) 54%,rgba(243,135,200,1) 100%) /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background-color #f5f5f5
     padding 50px 0 160px
 
 #temp-checkout
@@ -256,10 +255,11 @@ md-input-container
       font-size 18px
 #footer-top
   padding 40px 0
-  background-color optional
+  background-color black
   background-size cover
   background-position center
 .bottom-footer
+  border-top 1px solid #999
   background-color black
   padding 30px 0
 footer
