--- a/app/templates/partials/block-ui.html
+++ b/app/templates/partials/block-ui.html
@@ -1,7 +1,11 @@
 <div class="block-ui-overlay"></div>
 <div class="block-ui-message-container" aria-live="assertive" aria-atomic="true">
     <div class="block-ui-message" ng-class="$_blockUiMessageClass">
-        <img width="250px" src="img/logo-w-heart.png" alt=""/>
-        <span class="heartbeat">Loading...</span>
+        <img width="250px" src="img/logo.png" alt=""/>
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
     </div>
 </div>
