--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,18 +1,3 @@
-<div class="top-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8">
-                <h3>¿Dudas? Nosotros las resolvemos, contáctanos.</h3>
-            </div>
-            <div class="col-sm-4">
-                <div class="list-icons-add" ng-repeat="social in socialMedia">
-                    <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i> <span
-                            ng-bind-html="social.content | trustHtml"></span></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <div id="footer-top">
     <div class="container">
         <div class="row">
@@ -48,7 +33,7 @@
     </div>
 </div>
 <div class="text-center bottom-footer">
-    <p class="white">© 2018 Hanny Pulido, Todos los Derechos Reservados.</p>
+    <p class="white">© 2018 Monna Vintage, Todos los Derechos Reservados.</p>
 </div>
 
     
