--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -58,6 +58,11 @@ md-input-container
 .desk-hidde
   display none
 /* - HEADER STYLES LAYOUT - */
+.data-social-media
+  .navbar-nav li a 
+    font-size 18px
+    p 
+      margin 0
 .three-rows-nav
   .first-row
     .nav-link
@@ -87,7 +92,7 @@ md-input-container
 
   /* SECTION 0NE */
   .section-one
-    background-color #f1f1f1
+    background-color white
     a
       color danger
     p
