--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </section>
-    <section class="section-three">
+    <section class="section-one">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6" ng-repeat="item in Home.categoryProd">
@@ -79,7 +79,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="section-three">
         <div class="container">
             <div class="row box-post-blog align-items-center" ng-repeat="post in Home.blogHome">
@@ -87,7 +87,7 @@
                     <article class="box-container-post">
                         <h3 class="text-uppercase">{{post.title}}</h3>
                         <p>{{post.excerpt}}</p>
-                        <a href="{{post.link}}">Ver más <i class="fa fa-angle-right"></i></a>
+                        <a href="{{post.link}}">Visita nuestro blog <i class="fa fa-angle-right"></i></a>
                     </article>
                 </div>
                 <div class="col-sm-6 col-6 no-padding">
