--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -257,6 +257,26 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  #home .section-one, #home .section-two, #home .section-four, 
+  #home .section-five, #home .section-six, #home .section-seven
+    padding 30px 0
+  .section-three 
+    padding 0 !important  
+  .section-one 
+    p 
+      text-align center
+    .snip1190  
+      margin 10px auto 
+  figure.snip1190
+    margin 10px auto 
+  .navbar-toggler span
+    color fontClr
+  .one-rows-nav
+    .first-row
+      background-color #f5f5f5
+    .navbar-nav
+      flex-direction row
+      justify-content center !important
   .owl-carousel-products
     .owl-nav
       button.owl-prev
@@ -272,7 +292,13 @@
       justify-content center !important
 
   .shopping-cart
-    top -25px
+    padding 0 5px !important
+    margin-left 0
+    top 5px
+    .qty-cart
+      background-color #f5f5f5
+      top 0
+      left 10px
     i
       color black
   .xs-hidde
@@ -324,7 +350,8 @@
   /* SLIDER */
   .slider-box
     .slider-img
-      height 185px
+      height 300px
+      background-size cover
     .owl-nav
       display none
   .slider-small
@@ -334,6 +361,18 @@
       padding-top 10px
       padding-bottom 10px
   /* SECTION ONE */
+  .section-three
+    h3 
+      font-size 18px
+    p 
+      font-size 14px  
+    .box-post-blog .box-container-post
+      padding 15px 0
+  .section-two
+    .title-middle-line .text-content .font-type 
+      text-transform uppercase
+      font-size 24px
+      margin-top 6px
   .section-one
     .rounded-cicle
       margin-top 15px
