ajuste de estilo responsivo en tablet

--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -66,6 +66,17 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .navbar-toggler span 
+    color fontClr
+  .slider-box .slider-img
+    background-size cover
+  .one-rows-nav .first-row .nav-link
+    font-size 13px 
+  .one-rows-nav
+    .first-row
+      background-color white
+      .navbar-nav
+        flex-direction row
   .shopcart-qty > input
     margin 0 auto
   .btn-sm
@@ -105,147 +116,6 @@
   .services .box-service h3 
     padding 12px 20px 0
     text-align center
-  .services .box-service
-    padding 0
-    text-align center  
-  .container-tab
-    width 100%
-    padding-left 0
-    padding-right 0
-  .navbar-header
-    margin-top -30px
-  header .navbar-default
-    top 0
-    height 80px
-  header .navbar-default .navbar-nav > li > a
-    color #3a2103
-    padding 25px 15px
-  .breadcrumb > li
-    font-size 12px
-  #footer_area .first-foo
-    border-bottom 1px solid rgba(255,255,255,0.5)
-    padding 25px 0 45px 0
-  .contact-section
-    margin-top 45px
-  .carousel-caption
-    padding 25px
-    h2
-      font-size 24px
-    h4
-      font-size 18px
-  header .navbar-default .nav-log li > a
-    padding 15px 0
-    border none
-
-  header .navbar-default .navbar-nav > li > a
-    font-size 16px
-
-  .header .logo
-    width 100px
-    padding 25px 14px 0 25px
-    margin-top 10px !important
-
-  .box-widget
-    border-left 0 solid transparent
-    border-top 1px solid #ccc
-    padding 0
-    border none
-  .fluid-res
-    padding 0
-  #wrap
-    display none
-  .recent-work-wrap
-    height 200px
-  .work-description
-    margin-top 50px
-  .box-default h3
-    font-size 16px
-    height 40px
-  .slider-img
-    height 185px
-    background-size 100%
-    background-position left
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
-    color #555
-  .navbar-default .navbar-toggle .icon-bar
-    background-color #555
-    width 40px
-    height 5px
-
-  .navbar-logo
-    display none
-    .logo-img
-      display none
-
-  .navbar-header
-    float none
-
-  .navbar-toggle
-    display block
-    margin-top 7%
-
-  .navbar-collapse
-    border-top 1px solid transparent
-    box-shadow inset 0 1px 0 rgba(255,255,255,0.1)
-
-  .navbar-collapse.collapse
-    display none !important
-
-  .navbar-collapse.collapse.in
-    display block !important
-    border-top 0px solid white
-    border-color transparent
-    background-color white
-
-  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-    background transparent
-
-  .navbar-default .navbar-toggle
-    border-color transparent
-
-  .navbar-nav
-    float none!important
-    margin 7.5px -15px
-
-  .navbar-nav>li
-    float none
-
-  .navbar-nav>li>a
-    padding-top 10px
-    padding-bottom 10px
-
-  .navbar-toggle .icon-bar
-    background #555
-
-  .navbar-collapse
-    .mobile
-      display none
-
-  .navbar-nav
-    background rgba(255,255,255,0.9)
-    margin-top 30px
-    box-shadow 0 4px 5px rgba(0,0,0,0.3)
-    border-top 0px solid #f5f5f5
-
-  .carousel-inner > .item > img
-    height 620px
-
-  .recent-work-wrap
-    margin 5px
-
-  .recent-work-wrap > .titles
-    padding 35px 20px 10px
-
-  #product-detail .title-detail .content-title .title
-    text-align center
-
-  .recent-work-wrap
-    .titles
-      h3
-        font-size 18px
-  .box-sidebar .box-body .list-group a
-    color #777
-    word-break break-all
 
   #contact-section
     background-size cover
@@ -274,9 +144,9 @@
   .one-rows-nav
     .first-row
       background-color #f5f5f5
-    .navbar-nav
-      flex-direction row
-      justify-content center !important
+      .navbar-nav
+        flex-direction row
+        justify-content center !important
   .owl-carousel-products
     .owl-nav
       button.owl-prev
