--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
     <section class="slider-box">
         <div class="owl-carousel owl-theme owl-theme-slider">
             <div class="slider" ng-repeat="slide in Home.mainSlider" ng-repeat-owl-carousel
-                    carousel-init="Home.carouselInitializerSlider">
+                 carousel-init="Home.carouselInitializerSlider">
                 <div class="item" style="width: 100%;">
                     <a post-link="{ link: {url: slide.link, target: '_self'} }">
                         <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
@@ -16,7 +16,8 @@
             <div class="row">
                 <div class="col-sm-6" ng-repeat="item in Home.categoryProd">
                     <figure class="snip1190">
-                        <div class="img-caption" style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}');"></div>
+                        <div class="img-caption"
+                             style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}');"></div>
                         <figcaption>
                             <div class="square">
                                 <div></div>
@@ -30,7 +31,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="section-two" ng-controller="ShoppingCtrl as Shop">
         <div class="container">
             <div class="title-middle-line">
@@ -62,17 +63,16 @@
                         </div>
                     </div>
                     <div class="box-footer">
-                        <div class="row"> 
-                            <div class="col-sm-8 no-pd-r">
-                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-default">Ver más</a>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-default">Ver
+                                    más</a>
                             </div>
-                            <div class="col-sm-4">
-                                <button class="btn btn-optional btn-block"
-                                ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
-                                name: product.name, price: product.price, qty: 1,taxonomies : product.taxonomies, shipmentPrice: product.shipmentPrice, typeTax: product.typeTax}, 1)"
-                                    ng-disabled="Shop.itemInCart(product)"><i class="fa fa-shopping-cart"></i>
+                            <!--<div class="col-sm-4">
+                                <button ng-click="Shop.showPreviewItem($event, product)"
+                                        class="btn btn-optional btn-block"><i class="fa fa-shopping-cart"></i>
                                 </button>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
