--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -25,17 +25,8 @@
                                             </div>
                                         </a>
                                         <div class="box-footer">
-                                            <button class="btn btn-black"
-                                                    ng-click="Shop.setItem({id: product.id,
-                                                         image: product.featuredImage.url,
-                                                         name: product.name,
-                                                         price: product.price, qty: 1,
-                                                         taxonomies : product.taxonomies,
-                                                         shipmentPrice: product.shipmentPrice,
-                                                         typeTax: product.typeTax}, 1)"
-                                                    ng-disabled="Product.itemInCart(product)">
-                                                Agregar al carrito
-                                            </button>
+                                            <a ui-sref="product-detail({slug:product.slug})">Ver
+                                                más</a>
                                         </div>
                                     </div>
 
